--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Parkinsans:wght@300..800&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a {cursor: pointer;}
+
+
+/* NAVIGATION CSS */
+#Header {
+  position: absolute !important;
+  width: 100%;
+}
+#navigationBar {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+}
+#navigationContainer {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: nowrap;
+  background-color: #1a1a1a;
+  padding: 0 20px;
+  border-radius: 50px;
+  margin-top: 25px;
+}
+#navigationContainer #logo a {
+  font-family: "Parkinsans", sans-serif;
   color: white;
+  font-weight: bold;
+  font-size: 26px;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding-left: 10px;
+}
+#navigationContainer #logo a span {
+  font-size: 18px;
+  font-style: italic;
+}
+#navigationMenu ul {
+  display: flex;
+  gap: 50px;
+  margin: 0;
+  padding: 0;
+}
+#navigationMenu ul li {list-style: none;}
+#navigationMenu ul li a {
+  color: white;
+  font-family: "Parkinsans", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+  line-height: 68px;
+}
+#navigationMenu ul li:last-child a {
+  background-color: white;
+  color: black;
+  padding: 7px 20px;
+  border-radius: 50px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* HOME BANNER */
+#bannerContainer {
+  padding: 100px 20px;
 }
